update join, about pages

--- a/_pages/mission.html
+++ b/_pages/mission.html
@@ -24,9 +24,9 @@ permalink: "/about/"
       <img src="/assets/images/netpanel.png" alt="" style="max-width:400px;">
     </div>
     <div class="half-grid" style="padding-top: 0px;">
-      <h2 style="grid-column: 1 / -1;">we are...</h2>
+      <h2 style="grid-column: 1 / -1;">We are...</h2>
       <div class="nat-chapter" style="padding: 10px;">
-        <h3>a national chapter</h3>
+        <h3>A National Chapter</h3>
         <p>SUNY Potsdam's ACM is recognized by the <b>national chapter.</b> <br>
           SUNY Potsdam's ACM-w is recognized by the <b>national chapter.</b> <br>
           <br>
@@ -34,7 +34,7 @@ permalink: "/about/"
         </p>
       </div>
       <div class="local-chapter" style="padding: 10px;">
-        <h3>a local chapter and student organization</h3>
+        <h3>A Local Chapter and Student Organization</h3>
         <p>SUNY Potsdam's ACM is recognized by SUNY Potsdam's <b>Student Government Association</b>. <br>
           SUNY Potsdam's ACM-W is associated with SUNY Potsdam's <b>Center For Diversity</b>. <br>
           <br>
