--- a/_pages/join.html
+++ b/_pages/join.html
@@ -18,7 +18,7 @@ permalink: "/join/"
       </div>
       <div style="padding: 10px;">
         <h2>Attend ACM-W</h2>
-        <p>The best way you can get involved is to coming to regular Friday meetings. The meetings kick-off with some announcements, and then we go over our upcoming events. Then we give everyone an opporunity to share project updates or anything that they have been working on. The meetings conclude with lightning talks, where students give a talk on any topic of their choice. It's a great way to hear what's going on in the tech world or increase your public speaking ability!</p>
+        <p>The best way you can get involved is to coming to regular Sunday afternoon meetings. Usually the meeting is organized by the person that is giving the talk that meeting. Every meeting we have a student give a talk about a subject that they’re passionate about. Most talks are about women and gender in computer science. ACM-W is a place that we try to it a safe place for students — (talking about a stuff on campus, not sure how to word it…) (not sure if this is a good description)</p>
       </div>
       <div style="padding: 10px;">
         <h2></h2>
@@ -30,7 +30,7 @@ permalink: "/join/"
       </div>
       <div style="padding: 10px;">
         <h2>Participate in our Planning Meetings</h2>
-        <p>If you're looking to get involved with the ACM e-board, then attending these meetings are the best way to do it. During these meetings, we go over the work we have to do. If you're looking to be on the e-board for next year, we highly reccommend that you attend these meetings.</p>
+        <p>Become an ACM Admin! This will give you a way to get involved with the e-board and planning future events. Admins are able to help the e-board and learn how the e-board works. By doing this, you will be able to put this on your resumes and become a future e-board member! (again, not sure if this sounds good — but it’s a start..)</p>
       </div>
     </div>
   </div>
