add more volunteers to org

--- a/_pages/org.html
+++ b/_pages/org.html
@@ -54,12 +54,16 @@ permalink: "/org/"
         <p>Allie Miranda</p>
         <p>Sherilyn Tejada</p>
         <p>Samantha Armstrong</p>
+        <p>Miranda Yates</p>
+        <p>Katie Watson</p>
       </div>
       <div class="gridarea admin">
         <h5>Volunteers</h5>
-        <p style="font-style: bold;">Samantha Armstrong</p>
-        <p>Kyle Orto</p>
         <p>Samantha Armstrong</p>
+        <p>Kyle Orto</p>
+        <p>Christopher Welch</p>
+        <p>Jarred Durant</p>
+        <p>Ari Tsagaantsooj</p>
       </div>
       <div class="gridarea faculty">
         <h5>Faculty Advisors</h5>
