rewriting planning && acm-w

--- a/_pages/join.html
+++ b/_pages/join.html
@@ -18,7 +18,7 @@ permalink: "/join/"
       </div>
       <div style="padding: 10px;">
         <h2>Attend ACM-W</h2>
-        <p>The best way you can get involved is to coming to regular Sunday afternoon meetings. Usually the meeting is organized by the person that is giving the talk that meeting. Every meeting we have a student give a talk about a subject that they’re passionate about. Most talks are about women and gender in computer science. ACM-W is a place that we try to it a safe place for students — (talking about a stuff on campus, not sure how to word it…) (not sure if this is a good description)</p>
+        <p>The best way you can get involved is to coming to regular Sunday afternoon meetings. Usually the meeting is organized by the person that is giving the talk. Every meeting we have a student give a talk about a subject that they’re passionate about, for example — sexism, women in tech, and diversity in tech. ACM-W is a meant to be a safe place for students in the department since it’s a close space for students to talk about their feelings and experiences.</p>
       </div>
       <div style="padding: 10px;">
         <h2></h2>
@@ -30,7 +30,7 @@ permalink: "/join/"
       </div>
       <div style="padding: 10px;">
         <h2>Participate in our Planning Meetings</h2>
-        <p>Become an ACM Admin! This will give you a way to get involved with the e-board and planning future events. Admins are able to help the e-board and learn how the e-board works. By doing this, you will be able to put this on your resumes and become a future e-board member! (again, not sure if this sounds good — but it’s a start..)</p>
+        <p>Become an ACM Admin! This will give you a way to get involved with the E-board and planning of future events. Admins are able to help the E-board and see how ACM works behind the scene. By doing this, you will be able to put this on your resumes and have a chance to become a future E-board member!</p>
       </div>
     </div>
   </div>
