add more styling to front page cards. color needs to be changed

--- a/index.html
+++ b/index.html
@@ -12,12 +12,72 @@ layout: default
       <h5>Dunn 206</h5>
     </div>
   </div>
-  <div class="gridarea" id="slackplug" style="height:400px; background: var(--yellowlight); grid-template-columns: 1fr 1fr 1fr 1fr;">
-    <h3>Our Contributers</h3>
-    <h3>Learn About Us</h3>
-    <h3>ACM-W</h3>
-    <h3>Support Us</h3>
-    <h3>Join Our Club</h3>
+  <div class="gridarea" id="summary-cards">
+    <a href="/org" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Organizers</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          ACM is powered by the passionate students <br>
+          of the computer science department. <br> meet them.
+        </span>
+      </p>
+    </a>
+    <a href="/about" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Learn About Us</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          organization detail and mission statement.
+        </span>
+      </p>
+    </a>
+    <a href="/acmw" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">ACM-W</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          see what we've done.
+        </span>
+      </p>
+    </a>
+    <a href="/donate" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Support Us</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          support our mission.
+        </span>
+      </p>
+    </a>
+    <a href="/join" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Join Our Club</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          ACM is open to all levels of student involvement! <br> learn more.
+        </span>
+      </p>
+    </a>
+    <a href="/blog" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Blog</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          coming soon! it's almost done. :)
+        </span>
+      </p>
+    </a>
+    <a href="" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">CS Surival Guide</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          coming soon! it's almost done. :)
+        </span>
+      </p>
+    </a>
+    <a href="https://potsdamacm.slack.com/" class="summary-badge">
+      <p class="muted">
+        <span style="font-weight: bold; font-size: 1.2em;">Slack</span><br>
+        <span style="font-style: italic; font-size: .7em; width: 80%;">
+          chat with other students and alumni. <br> get homework help.
+        </span>
+      </p>
+    </a>
   </div>
   <div class="gridarea" id="joinslack" style="height:500px;">
     <div id="slackcard" style="padding-bottom: 0px;">
