add two collections: blog and guides

--- a/_pages/org.html
+++ b/_pages/org.html
@@ -60,9 +60,11 @@ permalink: "/org/"
       <div class="gridarea admin">
         <h5>Volunteers</h5>
         <p>Samantha Armstrong</p>
+        <p>Michael Cataldo</p>
         <p>Kyle Orto</p>
         <p>Christopher Welch</p>
         <p>Jarred Durant</p>
+        <p>Matthew Feidt</p>
         <p>Ari Tsagaantsooj</p>
       </div>
       <div class="gridarea faculty">
