--- a/_pages/acmw.html
+++ b/_pages/acmw.html
@@ -29,7 +29,7 @@ permalink: "/acmw/"
     <h3>Past Meetings:</h3>
     <div class="acm-cards" style="margin: 20px; padding-bottom: 15px;">
       <div class="card">
-        <h2>Divertsity and Tech</h2>
+        <h2>Diversity and Tech</h2>
         <h3>Sherilyn Tejada</h3>
         <h4>spring 2018</h4>
       </div>
