--- a/index.html
+++ b/index.html
@@ -4,15 +4,82 @@ layout: default
 ---
 
 <div class="grid-vert-list">
-  <div class="gridarea" id="bender_welcome" style="height:550px; ">
+  <div class="gridarea" id="bender_welcome" style="height:1000px; ">
     <div id="welcomecard">
       <h2>SUNY Potsdam ACM </h2>
       <h2>&& SUNY Potsdam ACM-W</h2>
       <h5>Fridays at 4pm</h5>
       <h5>Dunn 206</h5>
     </div>
+    <div class="gridarea" id="summary-cards">
+      <a href="/about" class="summary-badge">
+        <p>
+          <span class="subtitle">Learn About Us</span><br>
+          <span class="muted">
+            organization detail and mission statement.
+          </span>
+        </p>
+      </a>
+      <a href="https://potsdamacm.slack.com/" class="summary-badge">
+        <p>
+          <span class="subtitle">Slack</span><br>
+          <span class="muted">
+            chat with other students and alumni. <br> get homework help.
+          </span>
+        </p>
+      </a>
+      <a href="/acmw" class="summary-badge">
+        <p>
+          <span class="subtitle">ACM-W</span><br>
+          <span class="muted">
+            see what we've done.
+          </span>
+        </p>
+      </a>
+      <a href="/org" class="summary-badge">
+        <p>
+          <span class="subtitle">Organizers</span><br>
+          <span class="muted">
+            ACM is powered by the passionate students <br>
+            of the computer science department. <br> meet them.
+          </span>
+        </p>
+      </a>
+      <a href="/org" class="summary-badge">
+        <p>
+          <span class="subtitle">Support Us</span><br>
+          <span class="muted">
+            support our mission.
+          </span>
+        </p>
+      </a>
+      <a href="/join" class="summary-badge">
+        <p>
+          <span class="subtitle">Join Our Club</span><br>
+          <span class="muted">
+            ACM is open to all levels of student involvement! <br> learn more.
+          </span>
+        </p>
+      </a>
+      <a href="/blog" class="summary-badge">
+        <p>
+          <span class="subtitle">Blog</span><br>
+          <span class="muted">
+            coming soon! it's almost done. :)
+          </span>
+        </p>
+      </a>
+      <a href="" class="summary-badge">
+        <p>
+          <span class="subtitle">CS Surival Guide</span><br>
+          <span class="muted">
+            coming soon! it's almost done. :)
+          </span>
+        </p>
+      </a>
+    </div>
   </div>
-  <div class="gridarea" id="summary-cards">
+  <!-- <div class="gridarea" id="summary-cards">
     <a href="/org" class="summary-badge">
       <p class="muted">
         <span style="font-weight: bold; font-size: 1.2em;">Organizers</span><br>
@@ -78,7 +145,7 @@ layout: default
         </span>
       </p>
     </a>
-  </div>
+  </div> -->
   <div class="gridarea" id="joinslack" style="height:500px;">
     <div id="slackcard" style="padding-bottom: 0px;">
       <h2>Join Our Slack</h2>
