--- a/_pages/join.html
+++ b/_pages/join.html
@@ -8,29 +8,39 @@ permalink: "/join/"
   <div class="textarea" style="padding-top: 30px;">
     <div>
       <h1 style="margin-bottom: 25px;">Get Involved</h1>
-      <p>We hope to engage interested students through regular meetings, lightning talks, and interactive workshops.</p>
+      <p>
+        As of Spring 2018, ACM meets in Dunn 206 every Friday, at 4pm. ACM-W meets as announced in ACM. <br> <br>
+        We hope to engage interested students through regular meetings, lightning talks, and interactive workshops.
+      </p>
       <br>
     </div>
     <div class="half-grid" style="padding-top: 0px;">
       <div style="padding: 10px;">
         <h2>Attend ACM</h2>
-        <p>The best way you can get involved is to coming to regular Friday meetings. The meetings kick-off with some announcements, and then we go over our upcoming events. Then we give everyone an opporunity to share project updates or anything that they have been working on. The meetings conclude with lightning talks, where students give a talk on any topic of their choice. It's a great way to hear what's going on in the tech world or increase your public speaking ability!</p>
+        <p>The best way you can get involved is to coming to regular Friday meetings. The meetings kick-off with some announcements, and then we go over our upcoming events. <br>
+        We encourage everyone to share project updates and lightning talks. <br>
+        Lightning talks are quick presentations on what's going on in tech, personal projects, anything at all.
       </div>
       <div style="padding: 10px;">
         <h2>Attend ACM-W</h2>
-        <p>The best way you can get involved is to coming to regular Sunday afternoon meetings. Usually the meeting is organized by the person that is giving the talk. Every meeting we have a student give a talk about a subject that they’re passionate about, for example — sexism, women in tech, and diversity in tech. ACM-W is a meant to be a safe place for students in the department since it’s a close space for students to talk about their feelings and experiences.</p>
+        <p>
+          ACM-W times are announced at ACM. <br>
+          ACM-W meetings are run by a selected moderator. The moderator picks a topic, presents on it, and opens discussion. <br>
+          ACM-W is a safe space. We often talk about the department climate and diversity issues in STEM. <br>
+          All are welcome.
+        </p>
       </div>
       <div style="padding: 10px;">
-        <h2></h2>
-        <p>If you're looking to get involved with the ACM e-board, then attending these meetings are the best way to do it. During these meetings, we go over the work we have to do. If you're looking to be on the e-board for next year, we highly reccommend that you attend these meetings.</p>
+        <h2>Leadership</h2>
+        <p>We are always looking for help. All volunteers are listed on the <a href="/org">organization page</a>. <br>
+        We are looking for regular admins.
+        Admins are invited to executive board meetings, and the level of involvement is entirely up to the volunteer. It's eboard-lite.
+        Help your local community, have full autonomy over your workload, and add something to your resume.
+        </p>
       </div>
       <div style="padding: 10px;">
         <h2>Become a National ACM Chapter Member</h2>
         <p>We encourage all members to become a member of <a href="http://www.acm.org/chapters/students" target="_blank">SUNY Potsdam's National ACM chapter</a>. It only costs $19 and you can check out all the <a href="http://www.acm.org/membership/student/benefits" target="_blank">benefits here</a>.</p>
-      </div>
-      <div style="padding: 10px;">
-        <h2>Participate in our Planning Meetings</h2>
-        <p>Become an ACM Admin! This will give you a way to get involved with the E-board and planning of future events. Admins are able to help the E-board and see how ACM works behind the scene. By doing this, you will be able to put this on your resumes and have a chance to become a future E-board member!</p>
       </div>
     </div>
   </div>
