--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@ title:
 layout: default
 ---
 
+<style>
+  #content {
+    padding-bottom: 0px;
+  }
+</style>
+
 <div class="grid-vert-list">
-  <div class="gridarea" id="bender_welcome" style="height:1000px; ">
+  <div class="gridarea" id="bender_welcome">
     <div id="welcomecard">
       <h2>SUNY Potsdam ACM </h2>
       <h2>&& SUNY Potsdam ACM-W</h2>
@@ -24,7 +30,7 @@ layout: default
         <p>
           <span class="subtitle">Slack</span><br>
           <span class="muted">
-            chat with other students and alumni. <br> get homework help.
+            chat with other students and alumni. get homework help.
           </span>
         </p>
       </a>
@@ -40,8 +46,8 @@ layout: default
         <p>
           <span class="subtitle">Organizers</span><br>
           <span class="muted">
-            ACM is powered by the passionate students <br>
-            of the computer science department. <br> meet them.
+            ACM is powered by the passionate students
+            of the computer science department. meet them.
           </span>
         </p>
       </a>
@@ -57,7 +63,7 @@ layout: default
         <p>
           <span class="subtitle">Join Our Club</span><br>
           <span class="muted">
-            ACM is open to all levels of student involvement! <br> learn more.
+            ACM is open to all levels of student involvement! learn more.
           </span>
         </p>
       </a>
@@ -79,76 +85,9 @@ layout: default
       </a>
     </div>
   </div>
-  <!-- <div class="gridarea" id="summary-cards">
-    <a href="/org" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Organizers</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          ACM is powered by the passionate students <br>
-          of the computer science department. <br> meet them.
-        </span>
-      </p>
-    </a>
-    <a href="/about" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Learn About Us</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          organization detail and mission statement.
-        </span>
-      </p>
-    </a>
-    <a href="/acmw" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">ACM-W</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          see what we've done.
-        </span>
-      </p>
-    </a>
-    <a href="/donate" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Support Us</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          support our mission.
-        </span>
-      </p>
-    </a>
-    <a href="/join" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Join Our Club</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          ACM is open to all levels of student involvement! <br> learn more.
-        </span>
-      </p>
-    </a>
-    <a href="/blog" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Blog</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          coming soon! it's almost done. :)
-        </span>
-      </p>
-    </a>
-    <a href="" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">CS Surival Guide</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          coming soon! it's almost done. :)
-        </span>
-      </p>
-    </a>
-    <a href="https://potsdamacm.slack.com/" class="summary-badge">
-      <p class="muted">
-        <span style="font-weight: bold; font-size: 1.2em;">Slack</span><br>
-        <span style="font-style: italic; font-size: .7em; width: 80%;">
-          chat with other students and alumni. <br> get homework help.
-        </span>
-      </p>
-    </a>
-  </div> -->
   <div class="gridarea" id="joinslack" style="height:500px;">
-    <div id="slackcard" style="padding-bottom: 0px;">
-      <h2>Join Our Slack</h2>
+    <div id="slackcard">
+      <h1>Join Our Slack</h1>
       <p>homework help, programmer humor,
       <br>and a network of students and alumni</p>
       <a href="https://potsdamacm.slack.com/"><img src="/assets/images/slack.svg" style="height:100px;"></a>
@@ -159,3 +98,36 @@ layout: default
   </div> -->
   </div>
 </div>
+
+<!-- Scrollbar is hidden then appears on scroll -->
+<!-- <script type="text/javascript">
+  $(document).ready(function() {
+    var header = $("header");
+    var body = $("body");
+    var header_position = header.position();
+    var window_height = $(window).height();
+    $(window).scroll(function() {
+      var window_pos = $(window).scrollTop();
+      // if (window_pos > header_position.top) {
+      if (window_pos > (window_height - 200)) {
+        body.addClass("show-top-row");
+        header.removeClass("stickyheader-hide")
+        header.addClass("stickyheader");
+      } else {
+        body.removeClass("show-top-row");
+        body.addClass("hide-top-row");
+        header.removeClass("stickyheader");
+        header.addClass("stickyheader-hide");
+      }
+    });
+  });
+</script> -->
+
+<!-- <style>
+  body {
+    grid-template-rows: 0px auto minmax(auto, 75px);
+  }
+  header {
+    visibility: hidden;
+  }
+</style> -->
