update header styling

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ layout: default
         <p>
           <span class="subtitle">Learn About Us</span><br>
           <span class="muted">
-            organization detail and mission statement.
+            mission statement
           </span>
         </p>
       </a>
@@ -30,7 +30,8 @@ layout: default
         <p>
           <span class="subtitle">Slack</span><br>
           <span class="muted">
-            chat with other students and alumni. get homework help.
+            chat with other students and alumni. <br>
+            get homework help.
           </span>
         </p>
       </a>
@@ -38,7 +39,7 @@ layout: default
         <p>
           <span class="subtitle">ACM-W</span><br>
           <span class="muted">
-            see what we've done.
+            our mission, past meetings.
           </span>
         </p>
       </a>
@@ -46,8 +47,8 @@ layout: default
         <p>
           <span class="subtitle">Organizers</span><br>
           <span class="muted">
-            ACM is powered by the passionate students
-            of the computer science department. meet them.
+            meet the students running ACM. <br>
+            see past programs.
           </span>
         </p>
       </a>
@@ -63,7 +64,7 @@ layout: default
         <p>
           <span class="subtitle">Join Our Club</span><br>
           <span class="muted">
-            ACM is open to all levels of student involvement! learn more.
+            learn more about our club.
           </span>
         </p>
       </a>
