reorder splash screen boxes

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@ layout: default
       <h5>Dunn 206</h5>
     </div>
     <div class="gridarea" id="summary-cards">
+      <a href="/join" class="summary-badge">
+        <p>
+          <span class="subtitle">Join Our Club</span><br>
+          <span class="muted">
+            learn more about our club.
+          </span>
+        </p>
+      </a>
       <a href="/about" class="summary-badge">
         <p>
           <span class="subtitle">Learn About Us</span><br>
@@ -52,19 +60,11 @@ layout: default
           </span>
         </p>
       </a>
-      <a href="/org" class="summary-badge">
+      <a href="/donate" class="summary-badge">
         <p>
           <span class="subtitle">Support Us</span><br>
           <span class="muted">
             support our mission.
-          </span>
-        </p>
-      </a>
-      <a href="/join" class="summary-badge">
-        <p>
-          <span class="subtitle">Join Our Club</span><br>
-          <span class="muted">
-            learn more about our club.
           </span>
         </p>
       </a>
