--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -6,15 +6,14 @@ permalink: "/donate/"
 
 <div class="grid-vert-list textarea" style="justify-content: center; align-items:center; margin-top: 25px;">
   <h1>Donate</h1>
-  <p class="flow-text">When you donate, we'll post your generous contribution to this page.</p>
+  <p>When you donate, we'll post your generous contribution to this page.</p>
 
   <h2>How is my Donation Used?</h2>
-  <p class="flow-text">When the money you donate is used, you'll be able to see exactly it is going and how you are helping to support and grow the SUNY Potsdam ACM. If you'd like, you can specify where you would like your money to go when you donate.</p>
+  <p>When the money you donate is used, you'll be able to see exactly it is going and how you are helping to support and grow the SUNY Potsdam ACM. If you'd like, you can specify where you would like your money to go when you donate.</p>
 
   <h2>How to Donate</h2>
-
   <h3>Online</h3>
-  <ol class="flow-text">
+  <ol>
       <li><a href="https://secure.potsdam.edu/giving/" target="_blank">Donate online by clicking here</a>.</li>
       <li>Fill in “SGA - ACM" for the Specific Program / Activity field. Do not check the “Greatest needs of the college” box.</li>
       <li>Leave a comment if you would like and we’ll post it here.</li>
@@ -28,55 +27,34 @@ permalink: "/donate/"
 
 
   <h3>By Check</h3>
-  <ol class="flow-text">
+  <ol>
       <li>Please make the check payable to <strong>Potsdam College Foundation</strong> with the memo of <strong>ACM - SGA</strong>.</li>
       <li>Send the check to <strong>Potsdam College Foundation, Inc.</strong> at <strong>44 Pierrepont Ave., Potsdam, NY 13676-2294, Raymond Hall 507</strong>.</li>
       <li>Email us your comment you'd like to leave and we'll post you to the site.</li>
   </ol>
 
   <h3>Need Help?</h3>
-  <p class="flow-text">If you need help making your gift, please contact Vicky Perry in the Foundation office at <a href="tel:315-267-3054">315-267-3054</a>. <br>
+  <p>If you need help making your gift, please contact the Office of College Advancement at <a href="tel:315-267-3253">315-267-3253</a>. <br>
   General questions about supporting the ACM should be directed to a <a href="/org/">member of the executive board</a>.
   </p>
 
   <h3>Other Donations</h3>
-  <p class="flow-text">If you want to donate hardware or anything else to the ACM, simply talk to any one of the ACM officers.</p>
+  <p>If you want to donate hardware or anything else to the ACM, simply talk to any one of the ACM officers.</p>
 
-    <div class="row">
-        <h2>Our Donators</h2>
-        <p class="flow-text">Thank you so much to our generous donors.</p>
+  <h2>Our Donators</h2>
+  <p>Thank you so much to our generous donors.</p>
 
-        <div class="col s12 m6">
-          <div class="card">
-                <div class="card-content">
-                    <p class="supporter-name">Dana B. Harris</p>
-                    <p class="supporter-amount">Donated $250 to starting a UPE chapter</p>
-                    <p class="supporter-date">Donated on Jan 30, 2017</p>
-                </div>
-
-            </div>
-        </div>
-
-        <div class="col s12 m6">
-          <div class="card">
-                <div class="card-content">
-                    <p class="supporter-name">Mike Cataldo</p>
-                    <p class="supporter-amount">Donated Raspberry Pi B+, USB Cable, and SD Card</p>
-                    <p class="supporter-date">Donated on Jan 30, 2017</p>
-                </div>
-
-            </div>
-        </div>
-
-
-        <div class="col s12 m6">
-
-                    <p class="supporter-name">Garry Griggs</p>
-                    <p class="supporter-amount">Donated Computer to Virtual Reality Room</p>
-                    <p class="supporter-date">Donated over winter break, 2017</p>
-
-        </div>
+  <div class="donations">
+    <div class="supporter-card">
+        <p class="supporter-name">Mike Cataldo</p>
+        <p class="supporter-amount">Donated Raspberry Pi B+, USB Cable, and SD Card</p>
+        <p class="supporter-date">Donated on Jan 30, 2017</p>
     </div>
 
-
+    <div class="supporter-card">
+        <p class="supporter-name">Garry Griggs</p>
+        <p class="supporter-amount">Donated Computer to Virtual Reality Room</p>
+        <p class="supporter-date">Winter 2017</p>
+    </div>
+  </div>
 </div>
