BIG blog update

--- a/_pages/donate.html
+++ b/_pages/donate.html
@@ -41,7 +41,7 @@ permalink: "/donate/"
   <h3>Other Donations</h3>
   <p>If you want to donate hardware or anything else to the ACM, simply talk to any one of the ACM officers.</p>
 
-  <h2>Our Donators</h2>
+  <h2>Our Donors</h2>
   <p>Thank you so much to our generous donors.</p>
 
   <div class="donations">
