--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ layout: default
       </a>
       <a href="https://potsdamacm.slack.com/" class="summary-badge">
         <p>
-          <span class="subtitle">Slack</span><br>
+          <span class="subtitle">Join Our Slack</span><br>
           <span class="muted">
             chat with other students and alumni. <br>
             get homework help.
@@ -72,31 +72,28 @@ layout: default
         <p>
           <span class="subtitle">Blog</span><br>
           <span class="muted">
-            coming soon! it's almost done. :)
+            ACM weekly email, student posts.
           </span>
         </p>
       </a>
       <a href="" class="summary-badge">
         <p>
-          <span class="subtitle">CS Surival Guide</span><br>
+          <span class="subtitle">CS Survival Guide</span><br>
           <span class="muted">
-            coming soon! it's almost done. :)
+            COMING SOON.
           </span>
         </p>
       </a>
     </div>
   </div>
-  <div class="gridarea" id="joinslack" style="height:500px;">
-    <div id="slackcard">
-      <h1>Join Our Slack</h1>
-      <p>homework help, programmer humor,
-      <br>and a network of students and alumni</p>
-      <a href="https://potsdamacm.slack.com/"><img src="/assets/images/slack.svg" style="height:100px;"></a>
-    </div>
+  <div id="slackplug" class="gridarea">
+    <a href="https://potsdamacm.slack.com/"><p>
+      Homework help, programmer humor, and a network of students and alumni.
+      <img src="/assets/images/slack.svg" style="height:80px; vertical-align: middle;">
+    </p></a>
   </div>
-  <!-- <div class="gridarea" id="slackplug" style="height:400px; background: white;">
-    <h2>~whitespace~</h2>
-  </div> -->
+  <div class="gridarea" id="hpl17splash" style="height:500px;">
+  </div>
   </div>
 </div>
 
